--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 </div>
             </div>
 
-            <div>
-                <p>Sneaker Company</p>
+            <div class="flexTwo">
+                <h3>Sneaker Company</h3>
                 <h2>Fall Limited Edition Sneakers</h2>
                 <p>These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
                 <p>$125.00</p>
